welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:4: error: not found: value esle
	esle { false }
        ^