welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
	if ( hour < 7 && talking ) { true } 
	else if ( hour > 20 && talking ) { true }
	esle { false }
}
